@@ -1,3 +1,4 @@
+- fix Security / Masking so it behaves more like the manual says
 - fix memory corruption in trade()
 - code: verify bounds for move() and fillscreen() when acccessing screen[]
 - shield/weapon arming/disarming and panic button rework, also fix its status on loadgame
